--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -12,7 +12,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{xcolor}
 \usepackage{graphicx}
-\usepackage[style=numeric]{biblatex}
+\usepackage[style=numeric, backend=biber]{biblatex}
 \usepackage{fvextra}
 \usepackage{csquotes}
 \usepackage{svg}
