--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
-\input{settings/packages.tex}
-\input{settings/style.tex}
-\addbibresource{bib.bib}
+\input{0.settings/packages.tex}
+\input{0.settings/style.tex}
+\addbibresource{bib/bib.bib}
 
 \title{Design und Implementierung eines Ressource-Management-Games}
 \author{Justin Nicola, Mat. 35441124, Informatik PO2018}
