--- a/0.settings/style.tex
+++ b/0.settings/style.tex
@@ -1,6 +1,6 @@
-\pagenumbering{gobble}
-\setlength\headheight{16pt}
-\pgfplotsset{compat=1.18}
+%\pagenumbering{gobble}
+%\setlength\headheight{16pt}
+%\pgfplotsset{compat=1.18}
 
-\pdfcompresslevel=0
-\pdfobjcompresslevel=0
+%\pdfcompresslevel=0
+%\pdfobjcompresslevel=0
