--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -40,6 +40,11 @@
   url={https://web.archive.org/web/20160305152046/http://www.gamerankings.com/pc/90380-age-of-empires/index.html},
   urldate={2022-08-04}
 }
+@online{aoe:ressources,
+  title={Age of Empires Ressourcen},
+  url={https://ageofempires.fandom.com/wiki/Resource},
+  urldate={2022-08-04}
+}
 % /AOE
 % CIV
 @online{civ,
@@ -94,4 +99,9 @@
   note={"Civilization", Next Generation Ausgabe Nummer 10, Oktober 1995},
   page={126},
   year={1995}
+}
+@online{civ:ressources,
+  title={Liste an Ressourcen in Civilization},
+  url={https://civilization.fandom.com/wiki/List_of_resources_in_Civ1},
+  urldate={2022-08-04}
 }
