--- a/2.beispiele/2.1.klassiker/2.1.2.civilization.tex
+++ b/2.beispiele/2.1.klassiker/2.1.2.civilization.tex
@@ -10,6 +10,20 @@ Das Spiel erhielt fünf weitere Nachfolger \textit{Civilization II, Civilization
     \item Ein Raumschiff bauen und Alpha Centauri als erster erreichen
     \item Überleben bis die Zeit ausgelaufen ist
 \end{itemize}\cite*[]{civwin}
+
+\paragraph*{Ressourcen}
+\begin{itemize}
+    \item Kohle
+    \item Fisch
+    \item Wild
+    \item Wild (Tundra)
+    \item Edelsteine
+    \item Gold
+    \item Pferde
+    \item Oasen
+    \item Öl
+    \item Robben
+\end{itemize}\cite*[]{civ:ressources}
 \newparagraph{Rezensionen}
 \begin{tabularx}{0.8\textwidth} { 
     | >{\raggedright\arraybackslash}X 
