--- a/2.beispiele/2.1.klassiker/2.1.1.aoe.tex
+++ b/2.beispiele/2.1.klassiker/2.1.1.aoe.tex
@@ -6,6 +6,14 @@ Das Spiel \textit{Age of Empires} ist ein von \textit{Ensemble Studios} entwicke
     \item Alle \textit{Artefakte} / Runen erobern
     \item Ein \textit{Weltwunder} bauen und erfolgreich bis Ende verteidigen
 \end{itemize}
+
+\paragraph*{Ressourcen}
+\begin{itemize}
+    \item Nahrung
+    \item Holz
+    \item Stein
+    \item Gold
+\end{itemize}\cite*[]{aoe:ressources}
 \newparagraph{Rezensionen}
 \begin{tabularx}{0.8\textwidth} { 
     | >{\raggedright\arraybackslash}X 
