Finished Sim City, added Notes, renamed Klassiker

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -45,6 +45,11 @@
   url={https://ageofempires.fandom.com/wiki/Resource},
   urldate={2022-08-04}
 }
+@online{aoe:technologies,
+  title={Age of Empires Technologien},
+  url={https://ageofempires.fandom.com/wiki/Technology_(Age_of_Empires)},
+  urldate={2022-08-05}
+}
 % /AOE
 % CIV
 @online{civ,
@@ -104,4 +109,69 @@
   title={Liste an Ressourcen in Civilization},
   url={https://civilization.fandom.com/wiki/List_of_resources_in_Civ1},
   urldate={2022-08-04}
+}
+% /Civ
+% Sim City 2000
+@online{simcity:ea,
+  title={Sim City 2000, EA},
+  url={https://www.ea.com/de-de/games/simcity/simcity-2000#description},
+  urldate={2022-08-05}
+}
+@online{simcity:igdb,
+  title={IGDB Eintrag von Sim City 2000},
+  url={https://www.igdb.com/games/simcity-2000},
+  urldate={2022-08-05}
+}
+@online{simcity:somacon,
+  title={Sim City 2000 Tipps und Tricks},
+  url={https://www.somacon.com/p606.php},
+  urldate={2022-08-05},
+  year={1996}
+}
+@online{simcity:fandom,
+  title={Liste aller Sim City 2000 Gebäude},
+  url={https://simcity.fandom.com/wiki/List_of_SimCity_2000_buildings},
+  urldate={2022-08-05}
+}
+@misc{simcity:video,
+  author = {SergiuHellDragoonHQ},
+  title = {SimCity 2000 - Gameplay (PC/HD)},
+  url = {https://www.youtube.com/watch?v=jk7BkwksgX8},
+  urldate={2022-08-05},
+  note={Zeitstempel 9:34}
+}
+@online{simcity:arcology,
+  title={Arcology in Sim City 2000},
+  url={https://simcity.fandom.com/wiki/Arcology},
+  urldate={2022-08-05}
+}
+@online{simcity:gameover,
+  title={Screenshot Game Over in Sim City 2000},
+  url={https://imgur.com/a/fuf0cf2},
+  urldate={2022-08-05}
+}
+@online{misc:arcology,
+  title={Was ist eine Arkologie},
+  url={https://spiegato.com/de/was-ist-eine-arkologie},
+  urldate={2022-08-05}
+}
+@online{simcity:allgame,
+  title={AllGame Rezension zu Sim City 2000},
+  url={https://web.archive.org/web/20141115005407/http://www.allgame.com/game.php?id=11771&tab=review},
+  urldate={2022-08-05},
+}
+@online{simcity:manual,
+  title={User Manual für Sim City 2000, digitalisiert},
+  url={https://classicreload.com/sites/default/files/sim-city-2000-manual.pdf},
+  urldate={2022-08-05},
+}
+@online{simcity:timeline,
+  title={Timeline of SimCity},
+  author={Cory Roberts},
+  publisher={medium},
+  day={15},
+  month={January},
+  year={2018},
+  url={https://medium.com/shinkansen-retrogaming/timeline-of-simcity-5dbc81e2b764},
+  urldate={2022-08-05},
 }
