--- a/2.beispiele/2.1.klassiker/2.1.0.klassiker.tex
+++ b/2.beispiele/2.1.klassiker/2.1.0.klassiker.tex
@@ -3,3 +3,4 @@ Als Klassiker werden im folgenden Spiele genannt, welche bereits etwas älter si
 
 \input{2.beispiele/2.1.klassiker/2.1.1.aoe.tex}
 \input{2.beispiele/2.1.klassiker/2.1.2.civilization.tex}
+\input{2.beispiele/2.1.klassiker/2.1.3.simcity.tex}
