Polished Sim City, added notes

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -155,11 +155,26 @@
   url={https://spiegato.com/de/was-ist-eine-arkologie},
   urldate={2022-08-05}
 }
-@online{simcity:allgame,
+@online{simcity:review:allgame,
   title={AllGame Rezension zu Sim City 2000},
   url={https://web.archive.org/web/20141115005407/http://www.allgame.com/game.php?id=11771&tab=review},
   urldate={2022-08-05},
 }
+@online{simcity:review:macuser,
+  title={MacUser Rezension zu Sim City 2000},
+  url={https://web.archive.org/web/20000122070956/http://macuser.zdnet.com/mu_1295/personal/gameroom.html},
+  year={1995},
+  urldate={2022-08-05},
+}
+
+@misc{simcity:review:segasaturn,
+  title={Review: Sim City 2000},
+  note={"Sega Saturn Magazin", Ausgabe Nummer 1, November 1995},
+  page={62},
+  year={1995},
+  author={Ed Lomas}
+}
+
 @online{simcity:manual,
   title={User Manual für Sim City 2000, digitalisiert},
   url={https://classicreload.com/sites/default/files/sim-city-2000-manual.pdf},
