--- a/notes.tex
+++ b/notes.tex
@@ -1,7 +1,39 @@
 \section*{Notizen}
+\subsection*{Offene Fragen}
 \begin{itemize}
     \item Age of Empires und Civ noch ausbauen?
     \item Genauer auf alle Nachfolger und Vorgänger eingehen, mit Publishern, Developern und Änderungen?
     \item Wirklich alle verfügbaren Rezensionen suchen und reinpacken?
     \item Umfrage zu gespielten Klassikern über Discord?
+    \item Noch Anno 1602 als Klassiker hinzufügen?
+    \item Notable Mentions? Cruisader Kings, Anno 1602, 
+\end{itemize}
+
+\subsection*{Ideen}
+\begin{itemize}
+    \item HexaBees turn based, oder RTS?
+    \item Falls RTS dann 
+\end{itemize}
+
+\subsection*{Fremdwörter}
+\begin{itemize}
+    \item Game engine
+    \item Real Time Strategy
+    \item launch arcos
+    \item Singeplayer (Game)
+    \item Isometrisch
+    \item Domination
+    \item Space Race
+    \item 
+\end{itemize}
+
+\subsection*{Abkürzungen}
+\begin{itemize}
+    \item SAT - Sega Saturn, Konsole
+    \item RTS
+    \item R - Residents
+    \item C - Commercial
+    \item I - Industries
+    \item KI
+    \item 
 \end{itemize}
