--- a/2.beispiele/2.1.klassiker/2.1.0.klassiker.tex
+++ b/2.beispiele/2.1.klassiker/2.1.0.klassiker.tex
@@ -1,5 +1,5 @@
 \subsection{Klassiker}
-Als Klassiker werden im folgenden Spiele genannt, welche bereits etwas älter sind, und maßgeblich beteiligt waren an der Bildung und Entwicklung dieses Genres. Vorwiegend haben die genannten Spiele also großen Anklang in der Community gefunden und wurden sehr gut aufgenommen. Der Zeitraum beschränkt sich folgend auf die Jahre 1980 - 2010.
+Als Klassiker werden im folgenden Spiele genannt, welche bereits etwas älter sind, und maßgeblich beteiligt waren an der Bildung und Entwicklung dieses Genres. Vorwiegend haben die genannten Spiele also großen Anklang in der Community gefunden und wurden sehr gut aufgenommen. Der Zeitraum beschränkt sich folgend auf die Jahre 1980 - 2010. Die genannten Spiele sind dabei lediglich ein Ausschnitt aller vorhandenen Klassiker und Meilensteine des Genres. 
 
 \input{2.beispiele/2.1.klassiker/2.1.1.aoe.tex}
 \input{2.beispiele/2.1.klassiker/2.1.2.civilization.tex}
