Added more definition and economy

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -1,3 +1,44 @@
+ % DEFINITION
+@online{definition:ressourcemanagement,
+  title={What is Resource Management and Why Is It Important?},
+  url={https://www.planview.com/resources/guide/resource-management-software/resource-management-leverage-people-budgets/},
+  urldate={2022-08-07},
+}
+
+ @book{book:gamedesign:resources, 
+  place={Berkeley, CA}, 
+  title={Game mechanics: Advanced game design}, 
+  publisher={New Riders}, 
+  author={Adams, Ernest W. and Dormans, Joris}, 
+  year={2012},
+  page={60}
+ } 
+ @book{book:gamedesign:economy, 
+  place={Berkeley, CA}, 
+  title={Game mechanics: Advanced game design}, 
+  publisher={New Riders}, 
+  author={Adams, Ernest W. and Dormans, Joris}, 
+  year={2012},
+  pages={61-62}
+ } 
+@online{definition:ressourcemanagementfandom,
+  title={Resource Management, Game Mechanics Fandom},
+  url={https://gamemechanics.fandom.com/wiki/Resource_Management},
+  urldate={2022-08-07},
+}
+@online{chesspieces,
+  title={Chess Piece Value},
+  url={https://www.chess.com/terms/chess-piece-value},
+  urldate={2022-08-07},
+}
+@online{definition:economy,
+  title={Chess Piece Value},
+  url={https://wirtschaftslexikon.gabler.de/definition/wirtschaft-54080},
+  urldate={2022-08-08},
+}
+
+
+
 @online{rmgwiki,
   title={{Construction and Management Simulation}},
   url={https://en.wikipedia.org/wiki/Construction_and_management_simulation},
