--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,12 @@
 \documentclass{article}
+
 \input{0.settings/packages.tex}
 \input{0.settings/commands.tex}
 \input{0.settings/style.tex}
+
 \addbibresource{0.bib/bib.bib}
 
-\title{Design und Implementierung eines Ressource-Management-Games}
+\title{Design und Implementierung eines Resource Management Games}
 \author{Justin Nicola, Mat. 35441124, Informatik PO2018}
 
 \begin{document}
@@ -19,7 +21,6 @@
 \maketitle
 \section{Einleitung}
 \input{1.einleitung/1.0.einleitung.tex}
-\input{1.einleitung/1.1.geschichte.tex}
 
 \section{Beispiele}
 \input{2.beispiele/2.0.beispiele.tex}
