--- a/notes.tex
+++ b/notes.tex
@@ -9,10 +9,24 @@
     \item Notable Mentions? Cruisader Kings, Anno 1602, 
 \end{itemize}
 
+Wo unterscheiden sich Resource Management Games von anderen spielen
+- Main Gameplay Loop 
+
 \subsection*{Ideen}
 \begin{itemize}
     \item HexaBees turn based, oder RTS?
     \item Falls RTS dann 
+    \item Für Neuerscheinungen:
+    \item RimWorld
+    \item (Stellaris)
+    \item Factorio
+    \item Frostpunk (Moral als abstrakte Ressource / Ansteigende Gefahr)
+    \item Age of Darkness (Ansteigende Gefahr)
+    \item Northgard
+    \item Potioncraft (maybe spielen)
+    \item Magic: The Gathering
+    \item Siedler von Catan
+    \item Alle Klassiker mit den neusten Version vergleichen
 \end{itemize}
 
 \subsection*{Fremdwörter}
