Finished Definitions and added RimWorld

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -32,9 +32,46 @@
   urldate={2022-08-07},
 }
 @online{definition:economy,
-  title={Chess Piece Value},
+  title={Definition einer Wirtschaft},
   url={https://wirtschaftslexikon.gabler.de/definition/wirtschaft-54080},
   urldate={2022-08-08},
+}
+@online{article:medium:economy,
+  title={The Pillars of Internal Economy — An Introduction to Game Economics},
+  url={https://yvensserpa.medium.com/the-pillars-of-internal-economy-an-introduction-to-game-economics-38d8e73d5afa},
+  urldate={2022-08-08},
+  author={Yvens Serpa},
+  day={16},
+  month={Oktober},
+  year={2020}
+}
+
+@misc{paper:information,
+author = {Mathevet, Laurent and Perego, Jacopo and Taneva, Ina},
+year = {2017},
+month = {02},
+title = {On Information Design in Games},
+doi = {10.13140/RG.2.2.35431.34724}
+}
+
+@online{article:fogofwar,
+  title={What Is Fog of War?},
+  url={https://nerdburglars.net/what-is-fog-of-war/},
+  urldate={2022-08-08},
+  author={Dan Hastings},
+  day={5},
+  month={Oktober},
+  year={2019}
+}
+
+@online{article:events,
+  title={How Event-Driven Game Design Keeps The Player Guessing},
+  url={https://game-wisdom.com/critical/event-driven-game-design},
+  urldate={2022-08-08},
+  author={Josh Bycer},
+  day={8},
+  month={Dezember},
+  year={2016}
 }
 
 
