--- a/1.einleitung/1.1.definition.tex
+++ b/1.einleitung/1.1.definition.tex
@@ -4,11 +4,7 @@ Um die Kategorie der Ressource Management Games zu definieren, ist es essenziell
 Im Zentrum dieser Kategorie stehen also die \textit{Ressourcen}, das \textit{Verwalten} dieser Ressourcen innerhalb einer \textit{Ökonomie}, und der zu einem gegebenen Zeitpunkt vorhandene \textit{Informationsgehalt} des Spielers.
 
 \subsubsection{Ressourcen}
-Der erste fundamentale Bestandteil sind die \textit{Ressourcen}. Als Stützpfeiler von Ökonomien kann jegliches Konzept, was numerisch erfasst und gemessen werden kann als Ressource gelten. Speziell auf Spiele bezogen gibt es also etliche Möglichkeiten eine Ressource zu etablieren. So sind Geld, Energie oder eigene Einheiten verschiedene Ressourcen, aber nach genannter Definition auch gegnerische Einheiten, Zeit und Geschwindigkeit. Statische und nicht interaktive Objekte oder Gebäude hingegen sind keine Ressourcen \cite*[]{book:gamedesign:resources}. Für die kommenden Sektionen wird der Begriff der Ressource jedoch folgendermaßen eingeschränkt:
-\begin{center}
-    \textit{Eine Ressource ist eine kontrollierbare, numerisch erfassbar und messbare Größe}
-\end{center}
-Zwar ist Zeit auch im Umgangssprachlichen eine Ressource (vgl. \textit{\glqq Zeitmanagement\grqq}), ist in den meisten Spielen jedoch keine Ressource im herk WIE ERKLÄRE ICH DASS ZEIT KEINE 
+Der erste fundamentale Bestandteil sind die \textit{Ressourcen}. Als Stützpfeiler von Ökonomien kann jegliches Konzept, was numerisch erfasst und gemessen werden kann als Ressource gelten. Speziell auf Spiele bezogen gibt es also etliche Möglichkeiten eine Ressource zu etablieren. So sind Geld, Energie oder eigene Einheiten verschiedene Ressourcen, aber nach genannter Definition auch gegnerische Einheiten, Zeit und Geschwindigkeit. Statische und nicht interaktive Objekte oder Gebäude hingegen sind keine Ressourcen \cite*[]{book:gamedesign:resources}. Es ist jedoch keine \textit{Kontrollierbarkeit} gefordert, so ist \textit{Zeit} auch eine Ressource, auch wenn diese nie mehr werden kann und vom Menschen nicht beeinflussbar ist.
 
 Eine Ressource gilt als \textit{greifbar} (engl. \textit{tangible}), wenn diese Ressource in der physischen oder virtuellen Welt tatsächlich existiert und wahrgenommen werden kann. Die Ressource besitzt also eine eindeutige Koordinate im Raum. Beispielhaft dafür wären wiederum Einheiten, Bäume oder Eisenminen. Im Gegensatz dazu stehen \textit{nicht greifbare} (engl. \textit{intangible}) Ressourcen. Darunter fallen alle Ressourcen, die keine Koordinate im physischen oder virtuellen Raum haben. Lebenspunkte einer Einheit sind beispielsweise keine greifbare Ressource. 
 
@@ -17,7 +13,7 @@ Diese beiden Gegensätze können in Wechselwirkung stehen, so kann ein vom Spiel
 Ressourcen können weiterhin gruppiert werden in \textit{konkret} (engl. \textit{concrete}) oder \textit{abstrakt} (engl. \textit{abstract}). Konkrete Ressourcen sind dabei jegliche Form von Ressourcen, welche der Spieler tatsächlich als diese wahrnimmt, also etwa Holz, Lebenspunkte oder Bäume. Abstrakte Ressourcen hingegen werden nicht vom Spieler als solche erkannt und nicht gezeigt, sondern für Hintergrundberechnungen verwendet. Ein klassisches Beispiel einer solchen Ressource ist der Wert der einzelnen Spielsteine beim Schach. Ein Bauer hat einen numerischen Wert von \textit{1}, die Königin hingegen einen Wert von \textit{9}. Der König hat als einziger Spielstein keinen Wert, da mit dessen Fall das Spiel endet \cite*[]{chesspieces}. Diese Werte werden im Spiel nicht thematisiert und auch nicht in dessen Konzept eingebunden, sondern existieren einzig für den Zweck der Wertebestimmung eines Spielers.
 
 \subsubsection{Ökonomie}
-Eine \textit{Ökonomie}, oder auch \textit{Wirtschaft}, ist ein System und \glqq [...] besteht aus Einrichtungen, Maschinen und Personen, die Angebot und Nachfrage generieren und regulieren.\grqq \cite*[]{definition:economy}. Diesem System sind vier verschiedene Funktionen inne \cite*[]{book:gamedesign:economy}:
+Eine \textit{Ökonomie}, oder auch \textit{Wirtschaft}, ist ein System und \glqq [...] besteht aus Einrichtungen, Maschinen und Personen, die Angebot und Nachfrage generieren und regulieren.\grqq \cite*[]{definition:economy}. Diesem System sind vier verschiedene Funktionen inne \cite*[]{book:gamedesign:economy,article:medium:economy}:
 
 \newparagraph{Quellen}
 Als \textit{Quelle} (engl. \textit{source}) wird eine Mechanik beschrieben, welche neue Ressourcen generiert. Ob dabei durch Konditionen ausgelöst oder in kontinuierlichem Fluss ist dabei nicht von Bedeutung. Ein Beispiel einer solchen Quelle ist die natürliche Lebensregeneration von Einheiten, wobei diese Quelle erst mit Erfüllung einer Kondition neue Lebenspunkte generiert, da für gewöhnlich die Lebenspunkte zuerst unter dem Maximum liegen müssen.
@@ -30,3 +26,12 @@ Ein Umwandler (engl. \textit{converter}) ist die Mechanik einer Transition zwisc
 
 \newparagraph{Händler}
 Die Mechanik des \textit{Händlers} (engl. \textit{trader}) beschreibt den Austausch von Ressourcen. Anders als ein Umwandler werden jedoch keine Ressourcen erschaffen oder zerstört, sondern lediglich vorhandene ausgetauscht. Diesem Austausch liegt eine \textit{Austauschregel} zugrunde, so kann ein beispielsweise in einem virtuellen Laden vorhandener Gegenstand ein gewisser Betrag an Währung kosten. Durch das Durchführen dieses Austausches erhält das Gegenüber dann den in der Austauschregel geforderten Betrag der Währung, und man selber erhält den geforderten Gegenstand.
+
+\subsubsection{Informationsgehalt}
+Ein weiterer Pfeiler von Ressource Management Games ist der zu einem Zeitpunkt gegebene \textit{Informationsgehalt}. Um das Spiel spannender zu gestalten, kann es sinnvoll sein, dem Spieler bestimmte Informationen vorzuenthalten. Der Spieler ist folglich dazu gezwungen, Entscheidungen zu treffen basierend auf den derzeit gegebenen Informationen beziehungsweise dem, was der Spieler glaubt zu wissen \cite*[]{paper:information}, was zu interessanten Ansätzen führen kann und Variation in das Spielgeschehen bringt \cite*[]{definition:ressourcemanagementfandom}. Ein Beispiel von fehlenden Informationen ist der sogenannte \textit{fog of war}. Ursprünglich aus einem militärischen Kontext stammend hat dieses Wort große Bedeutung in der Gaming Branche gefunden, speziell in Spielen des Genres \textit{Real Time Strategy} (Echtzeitstrategie). Für gewöhnlich ist in diesem Genre der größte Teil der Karte am Anfang verdeckt. Der Spieler kann sich dazu entscheiden, die Karte zu erkunden und dadurch Informationen zu sammeln, zum Beispiel die Position des Gegners. Fallen bereits aufgedeckte Teile der Karte außerhalb des Sichtfelds der Einheiten des Spielers, so werden sie durch den \textit{fog of war} verdeckt \cite*[]{article:fogofwar}. Der Spieler sieht lediglich den letzten Zustand der Karte, als die Einheiten dort noch Sicht hatten. Um also die Informationen zu aktualisieren ist der Spieler dazu angehalten, erneut Sicht darauf zu erhalten. Diese Mechanik entzieht dem Spieler also bewusst Informationen und spornt dazu an, Entscheidungen über Erkundung und Einheitenplatzierung zu treffen. 
+
+Eine weitere Möglichkeit, bewusst Informationen vorzuenthalten und den Spieler zu Entscheidungen zu bewegen sind \textit{Events}. Ein Event im Kontext von Game Design ist eine vorprogrammierte Erfahrung, die dem Spieler widerfahren wird. Welche Auswirkungen das auf das Spielgeschehen haben wird ist nicht inbegriffen, sollte aber bei der Erstellung solcher Events berücksichtigt werden. Dem Spieler wird im Voraus meist jedoch nicht mitgeteilt, welche Events stattfinden werden, in welcher Reihenfolge oder zu welchem Zeitpunkt. Die Kernidee ist, dass der Spieler adaptiv darauf reagiert, wodurch eine hohe Vielfalt an möglichen Spielverläufen entsteht und ein Spiel unter Umständen \textit{Wiederspielbarkeit} (engl. \textit{replayability}) verleiht, sodass der Spieler ein Spiel auch mehrfach spielen möchte und keine Langeweile nach bereits kurzer Zeit einsetzt. Diese Art des Entscheidungszwangs bricht also die Monotonie und birgt Potenzial für Strategie \cite*[]{article:events}. Ein Beispiel eines solchen Events wäre in einem Städteaufbauspiel eine plötzliche Hungersnot oder der Ausbruch eines Feuers, wodurch der Spieler dazu angehalten wird, Ressourcen umzulagern oder ähnliche Entscheidungen zu treffen.
+
+\subsubsection{Verwaltung}
+Die \textit{Verwaltung} beziehungsweise in diesem Kontext und in dieser Arbeit referenziert als \textit{Management}, stellt den letzten Pfeiler eines Resource Management Games dar. Die Verwaltung von Ressourcen beschreibt die essenzielle Tätigkeit der Verwendung der bereits zuvor erläuterten ökonomischen Funktionen zum Erfüllen eines bestimmten Zwecks. Diese Verwaltung ist jedoch nicht in den ökonomischen Funktionen begrenzt, sondern kann sich auch auf die Positionsveränderung der Koordinaten einer konkreten Ressource beziehen, etwa einer Einheit, die die Position wechselt. Der Spieler besitzt also eine gewisse Freiheit, Entscheidungen zu treffen über die Verwendung der gegebenen Ressourcen. Kombiniert mit dem zuvor betonten \textit{Entscheidungszwang} und der geforderten Adaptivität des Spielers hat der Spieler keine andere Wahl, als zu Verwalten, vorausgesetzt der Spieler setzt sich als Ziel, das Spiel nicht zu verlieren. 
+Bricht also ein Feuer in einer vom Spieler gebauten Stadt aus, und es ist keine Feuerwehr vorhanden, die auf dieses Event reagieren kann, könnte es sinnvoll sein, die vorhandenen Ressourcen, gegebenenfalls Geld, in eine Feuerwehr zu investieren, um damit auf den Entscheidungszwang zu reagieren.
