--- a/2.beispiele/2.0.beispiele.tex
+++ b/2.beispiele/2.0.beispiele.tex
@@ -1,3 +1,4 @@
 Um einen Überblick der Entwicklung und der Grundlage des Genres zu verschaffen werden im Folgenden einige Beispiele genannt, kategorisiert als Klassiker und Neuerscheinungen. Anhand dieser Beispiele wird anschließend eine Analyse durchgeführt, die den IST-Zustand abbilden soll.
 
 \input{2.beispiele/2.1.klassiker/2.1.0.klassiker.tex}
+\input{2.beispiele/2.2.neuerscheinungen/2.2.0.neuerscheinungen.tex}
