--- a/notes.tex
+++ b/notes.tex
@@ -7,6 +7,7 @@
     \item Umfrage zu gespielten Klassikern über Discord?
     \item Noch Anno 1602 als Klassiker hinzufügen?
     \item Notable Mentions? Cruisader Kings, Anno 1602, 
+    \item Für Verwaltung noch Quelle suchen? Schwer
 \end{itemize}
 
 Wo unterscheiden sich Resource Management Games von anderen spielen
@@ -38,7 +39,17 @@ Wo unterscheiden sich Resource Management Games von anderen spielen
     \item Isometrisch
     \item Domination
     \item Space Race
-    \item 
+    \item tangible
+    \item intangible
+    \item concrete
+    \item abstract
+    \item source
+    \item drain
+    \item converter
+    \item trader
+    \item fog of war
+    \item event
+    \item replayability
 \end{itemize}
 
 \subsection*{Abkürzungen}
